# athira

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repo.py  schemas.py
backend/app/routers/: availability.py  google_calendar.py  parse.py
backend/app/services/: llm_parse.py  normalize.py  validation.py
backend/data/: athira.db
backend/tests/: test_normalize.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  conflicts.ts  gridUtils.ts  index.css  overlap.ts  timezones.ts  types.ts
frontend/src/components/: AvailabilityPopup.tsx  WeeklyGrid.tsx
frontend/src/components/effects/: CursorTrail.tsx
frontend/src/hooks/: usePointerParallax.ts  useSpeechRecognition.ts
frontend/src/pages/: AvailabilityConfigPage.tsx  DashboardPage.tsx
